# hyperpoly-terrain

./: AAA-GAP-ANALYSIS.md  ARCHITECTURE-COMPARISON.md  CHAOTIC-DEMO-ANALYSIS.md  CONTRIBUTING.md  CROSSPOLLINATION.md  README.md  ROADMAP.md  VISION.md  install-deps.ps1  tsconfig.json
.github/: COMMUNITY.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
assets/: gear_2m_16t.glb  gear_2m_20t.glb  gear_2m_24t.glb  gear_3m_16t.glb  gear_3m_20t.glb  gear_3m_24t.glb  gear_4m_16t.glb  gear_4m_20t.glb  gear_4m_24t.glb  gear_5m_12t.glb  gear_5m_16t.glb  gear_5m_20t.glb  pulley_flat_120mm.glb  pulley_flat_160mm.glb  pulley_flat_80mm.glb  pulley_timing_40t_GT2.glb  pulley_vbelt_120mm_3gr.glb  pulley_vbelt_160mm_3gr.glb  pulley_vbelt_80mm_3gr.glb
benchmark/: README.md
bonds/: erosion.json  freeze.json  hydro.json  storm-cycle.json
bridge/: fractype_schema.js  fractype_schema.py
calibration/: calibration.json
cam/: cam_generator.py
checker/: fractype_check.py
dashboard/: main.py
docs/: 10_microtasks.md  concept_8_biomass_fields.md  tensor-spec.md  vinculum-spec.md
extension/: extension.js  package.json
film/: CMakeLists.txt  film.py  kaggle_render.ipynb  main.cpp  wind_vegetation.mat
film/asset-team/: ACCEPTANCE.md  PATCH.diff  PROMPT.md  VINCULUM_AUDIT.md  main.cpp.fallback.patch
game/: bridge.html  index.html  pangea_loom.js  spherical_seed.json  world-biomes.js
native/: CMakeLists.txt  Makefile.wasm  RFC-12-Backend-Evaluation.md  gpu_bridge.cpp  qef_solve_baseline.cpp
native/filament/src/: TerrainRenderer.cpp  WebGPUInterop.cpp
scripts/: manifold-build.js  (+2 more)
(+79 files in other folders)
